--- a/parchment.html
+++ b/parchment.html
@@ -66,7 +66,7 @@
             // add the download link
             url = decodeURI(window.location.search.substring(window.location.search.indexOf('search=')+8));
             games = localStorage.getItem("games");
-            if(!games[url]["local"]) {
+            if(!games[url] || !games[url]["local"]) {
                 $("#download_link").attr("href", url);
             } else {
                 $("#download_link").attr("href", "data:x-zmachine;base64," + games[url]['data']);
