--- a/parchment.html
+++ b/parchment.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<title>Parchment</title>
     <script src="universal.js"></script>
-    <script src="init.js"></script>
 	<script src="lib/jquery.min.js"></script>
-	<script src="lib/parchment.min.js" defer></script>
+	<script src="lib/parchment.min.js"></script>
+    <script src="init.js"></script>
     <script src="lib/zmachine.min.js" defer></script>
     <script src="src/gnusto/gnusto-engine.js" defer></script>
 	<script src="lib/jquery-ui-1.8.7.custom.min.js" defer></script>
@@ -15,9 +15,10 @@
 	<meta name="viewport" content="width=device-width,user-scalable=no">
 
     <script language="javascript" defer>
+
         function getSelector(sText) {
             var S = document.styleSheets[1]
-            var rules = S.rules||S.cssRules // IE ¦¦ others
+            var rules = S.cssRules // IE ¦¦ others
             for(var r=0;r<rules.length;r++) {
                 if(rules[r].selectorText==sText) {
                     return rules[r].style
