--- a/branches/firefox-branch/chrome/content/html/parchment.html
+++ b/branches/firefox-branch/chrome/content/html/parchment.html
@@ -5,21 +5,21 @@
 	<title>Parchment</title>
     <script src="universal.js"></script>
 	<script src="ff_localStorage.js"></script>
-    <script src="init.js"></script>
 	<script src="lib/jquery.min.js"></script>
-	<script src="lib/parchment.min.js" defer></script>
+	<script src="lib/parchment.min.js"></script>
+    <script src="init.js"></script>
     <script src="lib/zmachine.min.js" defer></script>
     <script src="src/gnusto/gnusto-engine.js" defer></script>
 	<script src="lib/jquery-ui-1.8.7.custom.min.js" defer></script>
 	<link rel="stylesheet" type="text/css" href="styles/ui-lightness/jquery-ui-1.8.7.custom.css">
 	<link rel="stylesheet" type="text/css" href="parchment.css">
-    <link rel="shortcut icon" href="favicon.ico" />
 	<meta name="viewport" content="width=device-width,user-scalable=no">
 
     <script language="javascript" defer>
+
         function getSelector(sText) {
             var S = document.styleSheets[1]
-            var rules = S.rules||S.cssRules // IE ¦¦ others
+            var rules = S.cssRules // IE ¦¦ others
             for(var r=0;r<rules.length;r++) {
                 if(rules[r].selectorText==sText) {
                     return rules[r].style
